# cloudbus-segment

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: tests.yml
cmake/: EnableCoverage.cmake
include/segment/: segment_service.hpp
include/segment/detail/: concepts.hpp  generator.hpp  immovable.hpp  with_lock.hpp
include/segment/detail/impl/: generator_impl.hpp
include/segment/service/: async_service.hpp  async_tcp_service.hpp
include/segment/service/impl/: async_service_impl.hpp  async_tcp_service_impl.hpp
src/: CMakeLists.txt  async_service.cpp  main.cpp  segment_service.cpp
tests/: CMakeLists.txt  test_async_context.cpp  test_async_tcp_service.cpp  test_generator.cpp  test_mock_bind.cpp  test_mock_listen.cpp  test_mock_setsockopt.cpp  test_mock_socketpair.cpp  test_segment_service.cpp
